fixed some spacing issues with meet the team, updated gleek how to with new instructions

--- a/src/App.css
+++ b/src/App.css
@@ -308,10 +308,26 @@
   text-align: center;
 }
 .dox-intro h2 {
-  margin-bottom: 0;
+  margin-bottom: -10px;
 }
 .dox-intro h3 {
   margin-top: 5px;
+}
+.section-team {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50vw;
+  margin: 10px;
+  color: #ffffff;
+  border-radius: 15px;
+  box-shadow: 0 0 5px 1px #26aaec;
+  border: 4px solid #ffffff;
+  flex: 1;
+  min-width: 200px;
+  max-width: 250px;
+  background-color: #000000;
 }
 .team-container {
   display: flex;
@@ -322,7 +338,7 @@
   max-width: 1300px;
 }
 .team-member {
-  width: 250px;
+  width: 25px;
   text-align: center;
   padding-top: 20px;
 }
@@ -330,11 +346,12 @@
   width: 200px;
   height: auto;
   border-radius: 50%;
-  margin-bottom: 10px;
+  margin-bottom: -50px;
 }
 .team-member-description {
   color: white;
   text-decoration: line-through;
+  margin-bottom: 20px;
 }
 .team-header {
   margin-bottom: 20px;
@@ -370,6 +387,29 @@
   min-width: 250px;
   max-width: 650px;
   background-color: #000000;
+}
+.how-to-container {
+  width: 425px;
+  height: auto;
+  background-color: #000f28;
+  color: white;
+  border: 8px solid #000000;
+  border-radius: 20px;
+  margin-bottom: -15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: cent;
+  box-shadow: 0 0 5px 5px #b8d4fb;
+  animation: swing 5.5s infinite alternate ease-in-out;
+}
+.how-to-border {
+  border: 4px solid #000000;
+  border-radius: 20px;
+  margin: 10px;
+  width: 400px;
+  height: auto;
 }
 .meme-container {
   width: 425px;
